# SISPS-PV-MCU

./: .cSpell.json  .clang-format  .editorconfig  .gitignore  .gitmodules  .mxproject  .prettierrc  CMakeLists.txt  CMakePresets.json  README.md  SISPS-PV-MCU.ioc  SISPS-PV.ioc  index.md
.github/Pages/: index.md
.github/workflows/: assign.yml  cmake.yml  codeql.yml  ctest.yml  jekyll-gh-pages.yml  pages.yml
CMake/: mcu.cmake  scripts.cmake  stm32CubeG0.cmake
CubeMX/: Makefile  STM32G070CBTx_FLASH.ld  startup_stm32g070xx.s
Inc/: FreeRTOSConfig.h  init.h  main.h  main.hpp  stm32g0xx_hal_conf.h  stm32g0xx_it.h
Inc/HAL/: stm32g0xx_hal_conf.h
Lib/: CMakeLists.txt
Lib/HDC1080/: CMakeLists.txt
Lib/HDC1080/Inc/: HDC1080_I2C.hpp
Lib/HDC1080/Src/: HDC1080_I2C.cpp
Lib/SM72445/: CMakeLists.txt
Lib/SM72445/Inc/: SM72445_I2C.hpp
Lib/SM72445/Src/: SM72445_I2C.cpp
Lib/TMP116/: CMakeLists.txt
Lib/TMP116/Inc/: TMP116_I2C.hpp
Lib/TMP116/Src/: TMP116_I2C.cpp
Modules/: CMakeLists.txt  stm32CubeG0.cmake
Src/: app_freertos.c  init.c  main.c  main.cpp  stm32g0xx_hal_msp.c  stm32g0xx_hal_timebase_tim.c  stm32g0xx_it.c  syscalls.c  sysmem.c  system_stm32g0xx.c
Test/: CMakeLists.txt  README.md
Test/HDC1080/: CMakeLists.txt
Test/HDC1080/Inc/: main.hpp  stm32g0xx_it.h
Test/HDC1080/Src/: main.cpp  stm32g0xx_hal_msp.c  syscalls.c  sysmem.c  system_stm32g0xx.c
Test/SM72445/: CMakeLists.txt
Test/SM72445/API/: CMakeLists.txt
Test/SM72445/API/Inc/: main.h
Test/SM72445/API/Src/: main.cpp  stm32g0xx_it.c
Test/SM72445/Inc/: main.h  main.hpp
Test/SM72445/Load/: CMakeLists.txt
Test/SM72445/Load/Inc/: main.hpp  stm32g0xx_it.h
Test/SM72445/Load/Src/: main.cpp  syscalls.c  sysmem.c  system_stm32g0xx.c
Test/SM72445/Src/: main.cpp  stm32g0xx_hal_msp.c
Test/TMP116/: CMakeLists.txt
Test/TMP116/Inc/: main.hpp
Test/TMP116/Src/: main.cpp  stm32g0xx_it.c
docs/: index.md
